RM-AGTPREP-010: lifecycle material AuthorityProfile (#110)
* RM-AGTPREP-010: lifecycle material AuthorityProfile (rotate sync).

GET material-lifecycle; put/rotate/revoke com profile_id invalida offline_validated.


* docs: evidência PR #110 no ROADMAP (RM-AGTPREP-010).


---------
